# EnglishAssistantCore

./: README.md  pyproject.toml  requirements.txt
EnglishAssistantCore/: Core.py
